src/objects/Temp_Stop__c.object
<CustomObject>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Temp Stops</relationshipLabel>
        <relationshipName>Temp_Stops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Temp Stops</relationshipLabel>
        <relationshipName>Temp_Stops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POP_Start_Date__c</fullName>
        <formula>Case__r.POP_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pop_Start__c</fullName>
        <label>Pop Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Total_Credit__c</fullName>
        <label>Request Total Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Total_Issue__c</fullName>
        <label>Request Total Issue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restart_Date__c</fullName>
        <label>Restart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMP_CON__c</fullName>
        <formula>Case__r.Subscription_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEMP CON</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Date__c</fullName>
        <label>Temp Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Temp Stop Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Temp_Stop_Qty__c</fullName>
        <label>Temp Stop Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Status__c</fullName>
        <formula>IF(Cancelled__c , &apos;Cancelled&apos;, IF(Temp_Stop_Date__c &gt;  TODAY(), &apos;Not Started&apos;,  IF(Temp_Stop_Date__c&lt;= TODAY() &amp;&amp;  Restart_Date__c &gt; TODAY(), &apos;On-going&apos;,  IF(Restart_Date__c &lt;= TODAY(), &apos;Completed&apos;, null) ) )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp Stop Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_To_Date_Count__c</fullName>
        <label>Year To Date Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Temp Stop</label>
    <nameField>
        <displayFormat>TS-{0000000000}</displayFormat>
        <label>Temp Stop</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Stops</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validate_Restart_Date_1</fullName>
        <active>true</active>
        <description>Restart date must be greater than start date</description>
        <errorConditionFormula>( Restart_Date__c &lt; Case__r.Subscription_Name__r.Zuora__SubscriptionStartDate__c  )</errorConditionFormula>
        <errorMessage>Restart date Should be greater than or equal to sub start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Restart_Date_2</fullName>
        <active>true</active>
        <description>Restart date must be less than or equal to sub stop date</description>
        <errorConditionFormula>( Restart_Date__c &gt; Case__r.Subscription_Name__r.Zuora__SubscriptionEndDate__c  )</errorConditionFormula>
        <errorMessage>Restart date Should be less than or equal to sub stop date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Restart_Date_3</fullName>
        <active>true</active>
        <description>Restart date must  not be greater than subscription end date</description>
        <errorConditionFormula>( Restart_Date__c &gt; Case__r.Subscription_Name__r.Zuora__SubscriptionEndDate__c  )</errorConditionFormula>
        <errorDisplayField>Cancelled__c</errorDisplayField>
        <errorMessage>Restart date Should not be greater than request stop date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Restart_Date_4</fullName>
        <active>false</active>
        <description>Should be greater than or equal to sub start date</description>
        <errorConditionFormula>( Restart_Date__c &lt;  Case__r.Subscription_Name__r.Zuora__SubscriptionStartDate__c  )</errorConditionFormula>
        <errorMessage>Should be greater than or equal to sub start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Restart_Date_5</fullName>
        <active>false</active>
        <description>Restart date should be publication day</description>
        <errorConditionFormula>( Restart_Date__c != POP_Start_Date__c )</errorConditionFormula>
        <errorMessage>Restart date should be publication day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Temp_Stop_Date_1</fullName>
        <active>false</active>
        <description>Temp Stop date must be greater than the current date</description>
        <errorConditionFormula>(Temp_Stop_Date__c &lt;= TODAY() )</errorConditionFormula>
        <errorDisplayField>Cancelled__c</errorDisplayField>
        <errorMessage>Tempstop date should be greater than current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Temp_Stop_Date_2</fullName>
        <active>true</active>
        <description>Temp Stop date must be less that the subscription end date</description>
        <errorConditionFormula>( Temp_Stop_Date__c &gt;  Case__r.Subscription_Name__r.Zuora__SubscriptionEndDate__c  )</errorConditionFormula>
        <errorDisplayField>Cancelled__c</errorDisplayField>
        <errorMessage>Tempstop date should be less than sub stop date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Temp_Stop_Date_3</fullName>
        <active>true</active>
        <description>Temp Stop date must be within the subscription date</description>
        <errorConditionFormula>( Temp_Stop_Date__c &lt;=  Case__r.Subscription_Name__r.Zuora__SubscriptionStartDate__c )</errorConditionFormula>
        <errorDisplayField>Cancelled__c</errorDisplayField>
        <errorMessage>Tempstop date Should be greater than or equal to sub start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Temp_Stop_Date_4</fullName>
        <active>true</active>
        <description>Temp Stop date must be less than the Restart date</description>
        <errorConditionFormula>Temp_Stop_Date__c    &gt;=   Restart_Date__c</errorConditionFormula>
        <errorDisplayField>Restart_Date__c</errorDisplayField>
        <errorMessage>Restart date should be greater than Temp Stop date</errorMessage>
    </validationRules>
</CustomObject>